@@ -9,13 +9,17 @@
 
 from dataclasses import dataclass
 import numpy
+import math
 #
 #
-class Vector2(object):
+CONST_GRAVITY = 1
+CONST_GRAVITY_MAX = 10
+#
+#
+class Vector2:
     def __init__(self, x, y):
         self.x = x
         self.y = y
-        
         
     def __add__(self, other):
         return Vector2(self.x + other.x,self.y + other.y)
@@ -37,6 +41,7 @@ class Vector2(object):
         
     def __ne__(self, other):
         return not self.__eq__(other)
+                
 
 class circle:
     def __init__(self, radius:float, position:Vector2):
@@ -49,18 +54,26 @@ class circle:
         return r < (self.position.x + other.position.x)**2 \
                   + (self.position.y + other.position.y)**2
 
+class Material:
+    def __init__(self,name,friction,hardness):
+        self.name = name
+        self.friction = friction # float speed*=friction
+        self.hardness = hardness # float vSpeed *=-hardness
+               
 @dataclass
 class aabb:
     min: Vector2   #topLeft
     max: Vector2   #topRight
-
+    material: Material
+    
+    
 #Boolean
 def collided(a: aabb,b: aabb):    
     if a.max.x < b.min.x or a.min.x > b.max.x:
         return False
-    if a.max.y < b.min.y or a.min.y > b.max.y:
+    if a.max.y < b.min.y or a.min.y > b.max.y:    
         return False
-    
+        
     return True
 
 
